[gd_scene load_steps=2 format=3 uid="uid://cubs2bko4tdk"]

[ext_resource type="Script" uid="uid://cngnyu2ry681y" path="res://main_menu.gd" id="1_06t4h"]

[node name="main menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06t4h")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="newgame_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "new game"

[node name="continue_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/icon_focus_color = Color(0.956863, 0.701961, 0.752941, 1)
theme_override_colors/icon_normal_color = Color(0.956863, 0.701961, 0.72549, 1)
text = "continue"

[node name="settings_popup" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "settings"

[node name="credits_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "credits"

[node name="quit_button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "quit"

[node name="title" type="Label" parent="."]
custom_minimum_size = Vector2(40, 20)
layout_mode = 0
offset_left = -119.0
offset_top = -125.0
offset_right = 135.0
offset_bottom = -90.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "hope cemetary game"
vertical_alignment = 1

[node name="settings" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="settings"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="settings outline" type="Panel" parent="settings/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 389.0
offset_top = 175.0
offset_right = 734.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2

[node name="music slider" type="HSlider" parent="settings/Control/settings outline"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 0
offset_left = 146.0
offset_top = 57.0
offset_right = 246.0
offset_bottom = 97.0
max_value = 1.0
step = 0.001

[node name="main volume" type="Label" parent="settings/Control/settings outline/music slider"]
layout_mode = 0
offset_left = 1.0
offset_top = -12.0
offset_right = 106.0
offset_bottom = 11.0
text = "main volume "

[node name="main slider" type="HSlider" parent="settings/Control/settings outline"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 0
offset_left = 146.0
offset_top = 100.0
offset_right = 246.0
offset_bottom = 140.0
max_value = 1.0
step = 0.001

[node name="main volume" type="Label" parent="settings/Control/settings outline/main slider"]
layout_mode = 0
offset_left = 1.0
offset_top = -12.0
offset_right = 106.0
offset_bottom = 11.0
text = "music volume "

[node name="main slider2" type="HSlider" parent="settings/Control/settings outline"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 0
offset_left = 147.0
offset_top = 144.0
offset_right = 247.0
offset_bottom = 184.0
max_value = 1.0
step = 0.001

[node name="main volume" type="Label" parent="settings/Control/settings outline/main slider2"]
layout_mode = 0
offset_left = 1.0
offset_top = -12.0
offset_right = 106.0
offset_bottom = 11.0
text = "sfx volume "

[node name="back" type="Button" parent="settings/Control/settings outline"]
layout_mode = 0
offset_left = 164.0
offset_top = 190.0
offset_right = 222.0
offset_bottom = 221.0
text = "< back"

[node name="credits" type="CanvasLayer" parent="."]
visible = false

[node name="Control" type="Control" parent="credits"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="credits popup" type="Panel" parent="credits/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 389.0
offset_top = 175.0
offset_right = 734.0
offset_bottom = 406.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="credits/Control/credits popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -11.5
offset_right = 77.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "CS 241 SPRING 2025"

[node name="back_2" type="Button" parent="credits/Control/credits popup"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -29.0
offset_top = -84.0
offset_right = 29.0
offset_bottom = -53.0
grow_horizontal = 2
grow_vertical = 0
text = "< back"

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -100
layout_mode = 0
offset_left = -574.0
offset_top = -322.0
offset_right = 575.0
offset_bottom = 318.0
mouse_filter = 2
color = Color(0.827836, 0.388822, 0.529754, 1)

[connection signal="pressed" from="VBoxContainer/newgame_button" to="." method="_on_newgame_button_pressed"]
[connection signal="pressed" from="VBoxContainer/settings_popup" to="." method="_on_settings_popup_pressed"]
[connection signal="pressed" from="VBoxContainer/credits_button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="VBoxContainer/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="settings/Control/settings outline/back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="credits/Control/credits popup/back_2" to="." method="_on_back_2_pressed"]
